cmake_minimum_required(VERSION 2.4)
set(ORACLE_HOME $ENV{ORACLE_HOME})
project(oraload)
add_subdirectory(lib)
add_subdirectory(oraload)
add_subdirectory(lobwizard)
MESSAGE("----------------------------------------------------------------------------------------------------------------------------------------------------------")
MESSAGE("Your ORACLE_HOME is set to $ENV{ORACLE_HOME}")
MESSAGE("Please make sure that it points to your local Oracle Installation.")
MESSAGE("ORACLE_HOME is needed at compile time.")
MESSAGE("----------------------------------------------------------------------------------------------------------------------------------------------------------")
MESSAGE("Your LD_LIBRARY_PATH is set to $ENV{LD_LIBRARY_PATH}")
MESSAGE("LD_LIBRARY_PATH is needed at runtime and should be added to your environment like this:")
MESSAGE(" ")
MESSAGE("LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ENV{ORACLE_HOME}/lib:$ENV{ORACLE_HOME}/ctx/lib")
MESSAGE("LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib:/usr/lib")
MESSAGE("export LD_LIBRARY_PATH")
MESSAGE("----------------------------------------------------------------------------------------------------------------------------------------------------------")
