include_directories(${CMAKE_SOURCE_DIR}/lib)
include_directories(${ORACLE_HOME}/rdbms/public)
include_directories(${ORACLE_HOME}/sdk/include)
find_file(NNZ10 libnnz10.so ${ORACLE_HOME} ${ORACLE_HOME}/lib)
find_file(OCCI libocci.so.10.1 ${ORACLE_HOME} ${ORACLE_HOME}/lib)
find_file(CLNTSH libclntsh.so.10.1 ${ORACLE_HOME} ${ORACLE_HOME}/lib)
set(libnnz ${NNZ10})
set(libocci ${OCCI})
set(libclntsh ${CLNTSH})
set(AppSrcs main.cpp)
add_executable(oraload ${AppSrcs})

target_link_libraries(oraload loadutil ${libnnz} ${libocci} ${libclntsh})

install(TARGETS oraload DESTINATION bin)