find_package(Qt4 REQUIRED)
include(${QT_USE_FILE})
include_directories(${CMAKE_SOURCE_DIR}/lib)
include_directories(${CMAKE_SOURCE_DIR}/lobwizard)
include_directories(${ORACLE_HOME}/rdbms/public)
include_directories(${ORACLE_HOME}/sdk/include)
find_file(NNZ10 libnnz10.dylib ${ORACLE_HOME} ${ORACLE_HOME}/lib)
find_file(OCCI libocci.dylib.10.1 ${ORACLE_HOME} ${ORACLE_HOME}/lib)
find_file(CLNTSH libclntsh.dylib.10.1 ${ORACLE_HOME} ${ORACLE_HOME}/lib)
set(libnnz ${NNZ10})
set(libocci ${OCCI})
set(libclntsh ${CLNTSH})
set(AppSrcs main.cpp)
cmake_policy(SET CMP0003 NEW)
link_directories(${CMAKE_SOURCE_DIR}/lib ${CMAKE_SOURCE_DIR}/lobwizard)
add_executable(oraload ${AppSrcs})
target_link_libraries(oraload loadutil lobwizard ${libnnz} ${libocci} ${libclntsh})

install(TARGETS oraload DESTINATION bin)
